feat: make equilibrium compatible with Java 17, refs #20
Lower maven.compiler.release from 21 to 17. Replace
SourceVersion.RELEASE_21 with RELEASE_17 and List.getFirst()/getLast()
(Java 21 SequencedCollection API) with get(0)/get(size-1). Update
documentation to state Java 17+ as minimum requirement.

All existing tests pass. See docs/decisions/ADR-001 for the evaluation.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>